# cch

./: LICENSE  README.md  pyproject.toml
src/cch/: __init__.py  __main__.py  cli.py  config.py
src/cch/data/: __init__.py  db.py  discovery.py  indexer.py  parser.py  protocols.py  repositories.py  search.py
src/cch/models/: __init__.py  analytics.py  categories.py  indexing.py  messages.py  projects.py  search.py  sessions.py
src/cch/services/: __init__.py  _row_helpers.py  analytics_service.py  container.py  cost.py  export_service.py  project_service.py  protocols.py  search_service.py  session_service.py
src/cch/ui/: __init__.py  app.py  async_bridge.py  deps.py  finder.py  layout.py  session_focus.py  temp_cleanup.py  theme.py
src/cch/ui/components/: cost_chart.py  heatmap.py  message_view.py  model_chart.py  search_result.py  stat_card.py  tool_call_view.py  tool_chart.py
src/cch/ui/pages/: analytics.py  compare.py  dashboard.py  export.py  projects.py  search.py  session_detail.py  sessions.py  tools.py
src/cch/ui/panels/: __init__.py  content_panel.py  detail_list_panel.py  list_panel.py  nav_sidebar.py
src/cch/ui/templates/: __init__.py  (+1 more)
tests/: conftest.py  test_cli_and_entrypoints.py  test_discovery.py  test_indexer.py  test_message_webview_filters.py  test_parser.py  test_parser_helpers.py  test_protocols_import.py  test_provider_samples.py  test_schema_and_categories.py  test_search.py  test_services.py  test_services_unit.py  test_temp_cleanup.py  test_ui_utilities.py
tests/data/: sample_session.jsonl  sample_sessions_index.json
(+19 files in other folders)
